        - Don't try and ensure_class_loaded an object. This doesn't work.
        - Add a warning to load_namespaces if a class in ResultSet/
          is not a subclass of DBIx::Class::ResultSet
        - ::Storage::DBI now correctly preserves a parent $dbh from
          terminating children, even during interpreter-global
          out-of-order destruction
        - Add DBIx::Class::FilterColumn for non-ref filtering
        - InflateColumn::DateTime support for MSSQL via DBD::Sybase
        - Millisecond precision support for MSSQL datetimes for
          InflateColumn::DateTime
        - Support connecting using $ENV{DBI_DSN} and $ENV{DBI_DRIVER}
        - current_source_alias method on ResultSet objects to
          determine the alias to use in programatically assembled
          search()es (originally added in 0.08100 but unmentioned)
        - Rewrite/unification of all subselecting limit emulations
          (RNO, Top, RowNum) to be much more robust wrt complex joined
          resultsets
        - MSSQL limits now don't require nearly as many applications of
          the unsafe_subselect_ok attribute, due to optimized queries
        - Fix as_subselect_rs to not inject resultset class-wide where
          conditions outside of the resulting subquery
        - Fix nasty potentially data-eating bug when deleting/updating
          a limited resultset
        - Depend on optimized SQL::Abstract (faster SQL generation)
        - update() on row not in_storage no longer throws an exception
          if there are no dirty columns to update (fixes cascaded update
          annoyances)
        - Update Schema::Versioned to respect hashref style of connection_info

0.08121 2010-04-11 18:43:00 (UTC)
        - Support for Firebird RDBMS with DBD::InterBase and ODBC
        - Add core support for INSERT RETURNING (for storages that
          supports this syntax, currently PostgreSQL and Firebird)