@@ -7,22 +7,20 @@ use mro 'c3';
 use Try::Tiny;
 
 sub _rebless {
-    my ($self) = @_;
+  my ($self) = @_;
 
-    my $caught;
-    my $dbtype;
-    try { $self->_get_dbh->get_info(17) }
-    catch { $caught = 1 };
+  try {
+    my $dbtype = $self->_get_dbh->get_info(17);
 
-    unless ( $caught ) {
-        # Translate the backend name into a perl identifier
-        $dbtype =~ s/\W/_/gi;
-        my $subclass = "DBIx::Class::Storage::DBI::ODBC::${dbtype}";
-        if ($self->load_optional_class($subclass) && !$self->isa($subclass)) {
-            bless $self, $subclass;
-            $self->_rebless;
-        }
+    # Translate the backend name into a perl identifier
+    $dbtype =~ s/\W/_/gi;
+    my $subclass = "DBIx::Class::Storage::DBI::ODBC::${dbtype}";
+
+    if ($self->load_optional_class($subclass) && !$self->isa($subclass)) {
+      bless $self, $subclass;
+      $self->_rebless;
     }
+  };
 }
 
 1;
